[package]
name = "sebnf_tool"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
indexmap = "2.13"
logos = "0.16"
miette = { version = "7.6.0", features = ["fancy"] }
thiserror = "2"
regex-automata = "0.4.13"
regex-syntax = "0.8"

[dev-dependencies]
regex = "1"
